--- a/_includes/about.html
+++ b/_includes/about.html
@@ -31,7 +31,8 @@
                         <p>search engine module</p>
                     </div><!--//content-->
                 </div><!--//item-->           
-                <div class="clearfix visible-md"></div>    
+            </div>
+            <div class="row"> 
                 <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-holder">
                         <i class="fa fa-globe"></i>
