--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -5,18 +5,121 @@
             <h2 class="title text-center">Participants</h2>  
             <div class="docs-inner">          
                 <div class="block">
-                    <h3 class="sub-title text-center">National data portal in production</h3>
-                    <p>Add table with all participants</p>
-                </div> 
+                    <h3 class="sub-title text-center">Living Atlases</h3>
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>Institution</th>
+                                <th>Country</th>
+                                <th>Language</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
+                                <th>Atlas of Living Australia</th>
+                                <th>Australia</th>
+                                <th>English</th>
+                                <th>In production</th>
+                            <tr>
+                            <tr>
+                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
+                                <th>Canadensys</th>
+                                <th>Canada</th>
+                                <th>English - French</th>
+                                <th>In progress</th>
+                            <tr>
+                            <tr>
+                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
+                                <th>GBIF France</th>
+                                <th>France</th>
+                                <th>French</th>
+                                <th>In production</th>
+                            <tr>
+                            <tr>
+                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
+                                <th>GBIF Spain</th>
+                                <th>Spain</th>
+                                <th>Spanish</th>
+                                <th>In production</th>
+                            <tr>
+                            <tr>
+                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
+                                <th>GBIF Portugal</th>
+                                <th>Portugal</th>
+                                <th>Portugese</th>
+                                <th>In production</th>
+                            <tr>  
+                            <tr>
+                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
+                                <th>CRBio</th>
+                                <th>Costa Rica</th>
+                                <th>Spanish</th>
+                                <th>In production</th>
+                            <tr>
+                            <tr>
+                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
+                                <th>Sistema Nacional de Datos Biologicos</th>
+                                <th>Argentina</th>
+                                <th>Spanish</th>
+                                <th>In production</th>
+                            <tr> 
+                            <tr>
+                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
+                                <th>GBIF Sweden</th>
+                                <th>Sweden</th>
+                                <th>Swidish</th>
+                                <th>In production</th>
+                            <tr>    
+                        </tbody>
+                    </table>
+                </div>
             </div>      
         </div><!--//container-->
         <div class="container">
-            
             <h2 class="title text-center"></h2>  
             <div class="docs-inner">          
             <div class="block">
                 <h3 class="sub-title text-center">The community in action</h3>
                 <p>Add a carrousel</p>
+
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                  </ol>
+
+                  <!-- Wrapper for slides -->
+                  <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                      <img src="..." alt="...">
+                      <div class="carousel-caption">
+                        ...
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="..." alt="...">
+                      <div class="carousel-caption">
+                        ...
+                      </div>
+                    </div>
+                    ...
+                  </div>
+
+                  <!-- Controls -->
+                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
             </div>       
         </div><!--//container-->
     </section><!--//docs->
