--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -6,75 +6,79 @@
             <div class="docs-inner">          
                 <div class="block">
                     <h3 class="sub-title text-center">Living Atlases</h3>
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Institution</th>
-                                <th>Country</th>
-                                <th>Language</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
-                                <th>Atlas of Living Australia</th>
-                                <th>Australia</th>
-                                <th>English</th>
-                                <th>In production</th>
-                            <tr>
-                            <tr>
-                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
-                                <th>Canadensys</th>
-                                <th>Canada</th>
-                                <th>English - French</th>
-                                <th>In progress</th>
-                            <tr>
-                            <tr>
-                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
-                                <th>GBIF France</th>
-                                <th>France</th>
-                                <th>French</th>
-                                <th>In production</th>
-                            <tr>
-                            <tr>
-                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
-                                <th>GBIF Spain</th>
-                                <th>Spain</th>
-                                <th>Spanish</th>
-                                <th>In production</th>
-                            <tr>
-                            <tr>
-                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
-                                <th>GBIF Portugal</th>
-                                <th>Portugal</th>
-                                <th>Portugese</th>
-                                <th>In production</th>
-                            <tr>  
-                            <tr>
-                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
-                                <th>CRBio</th>
-                                <th>Costa Rica</th>
-                                <th>Spanish</th>
-                                <th>In production</th>
-                            <tr>
-                            <tr>
-                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
-                                <th>Sistema Nacional de Datos Biologicos</th>
-                                <th>Argentina</th>
-                                <th>Spanish</th>
-                                <th>In production</th>
-                            <tr> 
-                            <tr>
-                                <th><img class="img-responsive img-circle" src="{{ site.baseurl }}/images/ala.jpg" alt="" /></th>
-                                <th>GBIF Sweden</th>
-                                <th>Sweden</th>
-                                <th>Swidish</th>
-                                <th>In production</th>
-                            <tr>    
-                        </tbody>
-                    </table>
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    
+                                    <th class="text-center">Institution</th>
+                                    <th class="text-center">GBIF page</th>
+                                    <th >Country</th>
+                                    <th >Language</th>
+                                    <th >Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    
+                                    <td><a href="https://www.ala.org.au" target="_blank">Atlas of Living Australia</a></td>
+                                    <td class="text-center"><a href="https://www.gbif.org/project/82983/atlas-of-living-australia" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
+                                    <td>Australia</td>
+                                    <td>English</td>
+                                    <td>In production</td>
+                                <tr>
+                                <tr>
+                                    <td>Canadensys</td>
+                                    <td class="text-center"><a href="https://www.gbif.org/project/82984/canadensys" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
+                                    <td>Canada</td>
+                                    <td>English - French</td>
+                                    <td>In progress</td>
+                                <tr>
+                                <tr>
+                                    <td><a href="http://portail.gbif.fr" target="_blank">GBIF France</a></td>
+                                    <td class="text-center"><a href="https://www.gbif.org/project/82969/atlas-of-living-france" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
+                                    <td>France</td>
+                                    <td>French</td>
+                                    <td>In production</td>
+                                <tr>
+                                <tr>
+                                    <td> <a href="http://datos.gbif.es" target="_blank">GBIF Spain</a></span></td>
+                                    <td class="text-center"><a href="https://www.gbif.org/project/82954/gbifes" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
+                                    <td>Spain</td>
+                                    <td>Spanish</td>
+                                    <td>In production</td>
+                                <tr>
+                                <tr>
+                                    <td><a href="http://dados.gbif.pt" target="_blank">GBIF Portugal </a></td>
+                                    <td class="text-center"><a href="https://www.gbif.org/project/82967/gbifpt" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
+                                    <td>Portugal</td>
+                                    <td>Portugese</td>
+                                    <td>In production</td>
+                                <tr>  
+                                <tr>
+                                    <td>CRBio</td>
+                                    <td class="text-center"><a href="https://www.gbif.org/project/82989/crbio-atlas-of-living-costa-rica" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
+                                    <td>Costa Rica</td>
+                                    <td>Spanish</td>
+                                    <td>In production</td>
+                                <tr>
+                                <tr>
+                                    <td>Sistema Nacional de Datos Biologicos</td>
+                                    <td class="text-center"><a href="https://www.gbif.org/project/82985/argentina-sistema-nacional-de-datos-biologicos" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
+                                    <td>Argentina</td>
+                                    <td>Spanish</td>
+                                    <td>In production</td>
+                                <tr> 
+                                <tr>
+                                    <td>GBIF Sweden</td>
+                                    <td></td>
+                                    <td>Sweden</td>
+                                    <td>Swidish</td>
+                                    <td>In production</td>
+                                <tr>    
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>      
         </div><!--//container-->
@@ -82,40 +86,96 @@
             <h2 class="title text-center"></h2>  
             <div class="docs-inner">          
             <div class="block">
-                <h3 class="sub-title text-center">The community in action</h3>
-                <p>Add a carrousel</p>
+                <h3 class="sub-title text-center">The community in action...</h3>
 
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <div id="community-action" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
                   <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#community-action" data-slide-to="0" class="active"></li>
+                    <li data-target="#community-action" data-slide-to="1"></li>
+                    <li data-target="#community-action" data-slide-to="2"></li>
+                    <li data-target="#community-action" data-slide-to="3"></li>
+                    <li data-target="#community-action" data-slide-to="4"></li>
+                    <li data-target="#community-action" data-slide-to="5"></li>
+                    <li data-target="#community-action" data-slide-to="6"></li>
+                    <li data-target="#community-action" data-slide-to="7"></li><!-- 
+                    <li data-target="#community-action" data-slide-to="8"></li>
+                    <li data-target="#community-action" data-slide-to="9"></li> -->
                   </ol>
 
                   <!-- Wrapper for slides -->
                   <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                      <img src="..." alt="...">
+                      <img src="{{ site.baseurl }}/public/images/madrid_2015_1.png" alt="...">
                       <div class="carousel-caption">
-                        ...
+                        Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
+                        Photo by Marie-Elise Lecoq, , GBIF France
                       </div>
                     </div>
                     <div class="item">
-                      <img src="..." alt="...">
+                      <img src="{{ site.baseurl }}/public/images/madrid_2015_3.png" alt="...">
                       <div class="carousel-caption">
-                        ...
+                        Atlas of Living Australia workshop 2015 - Madrid,  <br />
+                        Photo by Marie-Elise Lecoq, GBIF France
                       </div>
                     </div>
-                    ...
+                    <div class="item">
+                      <img src="{{ site.baseurl }}/public/images/madrid_2015_5.png" alt="...">
+                      <div class="carousel-caption">
+                        Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
+                        Photo by Marie-Elise Lecoq, GBIF France
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="{{ site.baseurl }}/public/images/madrid_2015_7.jpg" alt="...">
+                      <div class="carousel-caption">
+                        Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
+                        Photo by Marie-Elise Lecoq, GBIF France
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="{{ site.baseurl }}/public/images/enm_2016_1.jpg" alt="...">
+                      <div class="carousel-caption">
+                        European Node Meeting 2016 - Stockholm, Sweden <br />
+                        Photo by GBIF Spain
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="{{ site.baseurl }}/public/images/enm_2016_2.jpg" alt="...">
+                      <div class="carousel-caption">
+                        European Node Meeting 2016 - Stockholm, Sweden <br />
+                        Photo by GBIF Spain
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="{{ site.baseurl }}/public/images/international-ala-workshop-1.jpg" alt="...">
+                      <div class="carousel-caption">
+                        International ALA workshop 2016 - Madrid, Spain <br />
+                        Photo by GBIF Spain
+                      </div>
+                    </div>
+                    <!-- <div class="item">
+                      <img src="{{ site.baseurl }}/public/images/tdwg-2016-1.jpg" alt="...">
+                      <div class="carousel-caption">
+                        TDWG 2016 - Santa Clara de San Jose, Costa Rica <br />
+                        Photo by Fabien Caviere, GBIF France
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="{{ site.baseurl }}/public/images/international-ala-workshop-2015-1.jpg" alt="...">
+                      <div class="carousel-caption">
+                        International ALA workshop 2015 - Paris, France <br />
+                        Photo by Sophie Pamerlon, GBIF France
+                      </div>
+                    </div> -->
                   </div>
 
                   <!-- Controls -->
-                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                  <a class="left carousel-control" href="#community-action" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                   </a>
-                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                  <a class="right carousel-control" href="#community-action" role="button" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                   </a>
