--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -318,9 +318,10 @@ pre code {
 .docs {
   padding: 80px 0;
   background: #f5f5f5;
+  color: #D5502A;
 }
 .docs .title {
-  color: #384047;
+  color: #D5502A;;
   margin-top: 0;
   margin-bottom: 30px;
 }
@@ -341,22 +342,35 @@ pre code {
 .docs .block {
   margin-bottom: 60px;
 }
-.docs .code-block {
-  margin: 30px inherit;
-}
+
 .docs h3{
   color: #384047;
 }
-.docs .code-block pre[class*="language-"] {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
+
+.docs  .icon-holder {
+  position: relative;
+  left: 2%;
+  top: 0;
 }
+.docs .icon-holder .fa {
+  color: #384047;
+}
+
+.docs .gbif{
+  width: 15%;
+}
+
+.docs th {
+  color: #384047;
+}
+
+.docs  a {
+  color: #384047;
+}
+.docs  a:hover {
+  color: #384047;
+}
+
 /* ======= Contact Section ======= */
 .contact {
   padding: 80px 0;
@@ -565,6 +579,10 @@ pre code {
   }
   .contact .social-icons a .fa:before {
     font-size: 18px;
+  }
+
+  .docs .icon-link .gbif{
+    width: 35%;
   }
 }
 /* Small devices (tablets, 768px and up) */
