logo + footer + beginning of the highlighted modules

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
     <section id="about" class="about section">
         <div class="container">
             <h2 class="title text-center">Highlighted modules</h2>
-            <p class="intro text-center">Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            <p class="intro text-center">Atlas of Living Australia platform is composed of many modules but the community works mainly with these six ones. It means that other members are currently installing them and can help you to configure it or answer any question you can have. You can s them separatly. You don't need to install all the modules but some of them won't fully work with linked modules. </p>
             <div class="row">
                 <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-holder">
