--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -56,14 +56,14 @@
                                     <td>In production</td>
                                 <tr>  
                                 <tr>
-                                    <td>CRBio</td>
+                                    <td><a href="http://www.crbio.cr/crbio/?page_id=2&lang=es" target="_blank">CRBio</a></td>
                                     <td class="text-center"><a href="https://www.gbif.org/project/82989/crbio-atlas-of-living-costa-rica" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
                                     <td>Costa Rica</td>
-                                    <td>Spanish</td>
+                                    <td>Spanish - English</td>
                                     <td>In production</td>
                                 <tr>
                                 <tr>
-                                    <td>Sistema Nacional de Datos Biologicos</td>
+                                    <td><a href="http://datos.sndb.mincyt.gob.ar/" target+"_blank">Sistema Nacional de Datos Biologicos</a></td>
                                     <td class="text-center"><a href="https://www.gbif.org/project/82985/argentina-sistema-nacional-de-datos-biologicos" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
                                     <td>Argentina</td>
                                     <td>Spanish</td>
@@ -71,11 +71,32 @@
                                 <tr> 
                                 <tr>
                                     <td>GBIF Sweden</td>
-                                    <td></td>
+                                    <td class="text-center"></td>
                                     <td>Sweden</td>
                                     <td>Swidish</td>
                                     <td>In production</td>
-                                <tr>    
+                                <tr>   
+                                <tr>
+                                    <td><a href="https://nbnatlas.org/" target="_blank">National Biodiversity Network Atlas </a></td>
+                                    <td class="text-center"></td>
+                                    <td>United Kingdom</td>
+                                    <td>English</td>
+                                    <td>In production</td>
+                                <tr> 
+                                <tr>
+                                    <td><a href="https://scotland.nbnatlas.org/" target="_blank">National Biodiversity Network Altas - Scotland </a></td>
+                                    <td class="text-center"><a href="https://www.gbif.org/project/82973/atlas-of-living-scotland" target="_blank"><img class="gbif" src="{{ site.baseurl }}/public/css/images/GBIF-2015-mark.png"></a></td>
+                                    <td>Scotland</td>
+                                    <td>English</td>
+                                    <td>In production</td>
+                                <tr> 
+                                <tr>
+                                    <td><a href="https://wales.nbnatlas.org/" target="_blank">National Biodiversity Network Atlas - Wales</a></td>
+                                    <td class="text-center"></td>
+                                    <td>Wales</td>
+                                    <td>English - Welsh</td>
+                                    <td>In production</td>
+                                <tr>  
                             </tbody>
                         </table>
                     </div>
