--- a/_includes/promo.html
+++ b/_includes/promo.html
@@ -12,6 +12,9 @@
                 <li><a href="https://github.com/AtlasOfLivingAustralia/documentation" target="_blank">Full Documentation</a></li>
                 <li>Created by: <a href="http://www.ala.org.au/" target="_blank">Atlas of Living Australia</li>
             </ul><!--//meta-->
+            <div class="caption">
+                <p> <a href="https://www.inaturalist.org/photos/2664553" target="_blank">Red Kangaroo</a>, <i class="fa fa-copyright"></i> John Sullivan, some rights reserved (<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC</a>)</p>
+            </div>
         </div><!--//container-->
         <div class="social-media">
             <div class="social-media-inner container text-center">
