--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -235,6 +235,10 @@ pre code {
   position: relative;
   top: -5px;
 }
+.promo .caption{
+  font-size: 12px;
+  color: #384047;
+}
 /* ======= About Section ======= */
 .about {
   padding: 80px 0;
@@ -481,9 +485,8 @@ pre code {
 }
 .contact .social-icons a {
   display: inline-block;
-  background: #0c86ae;
-  width: 48px;
-  height: 48px;
+  width: 25%;
+  height: 25%;
   text-align: center;
   padding-top: 12px;
   -webkit-border-radius: 50%;
@@ -507,6 +510,24 @@ pre code {
   font-size: 26px;
   text-align: center;
   padding: 0;
+}
+
+.contact .logo {
+
+}
+
+.contact .logo .col-md-3{
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+    width: 24%;
+}
+
+#logo-csiro, #logo-ncris, #logo-ala, #logo-gbif{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: 50%
 }
 /* ======= Footer ======= */
 .footer {
