--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -127,21 +127,21 @@
                   <!-- Wrapper for slides -->
                   <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                      <img src="{{ site.baseurl }}/public/images/madrid_2015_1.png" alt="...">
+                      <img src="{{ site.baseurl }}/public/images/madrid_2015_1.jpg" alt="...">
                       <div class="carousel-caption">
                         Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
                         Photo by Marie-Elise Lecoq, , GBIF France
                       </div>
                     </div>
                     <div class="item">
-                      <img src="{{ site.baseurl }}/public/images/madrid_2015_3.png" alt="...">
+                      <img src="{{ site.baseurl }}/public/images/madrid_2015_3.jpg" alt="...">
                       <div class="carousel-caption">
                         Atlas of Living Australia workshop 2015 - Madrid,  <br />
                         Photo by Marie-Elise Lecoq, GBIF France
                       </div>
                     </div>
                     <div class="item">
-                      <img src="{{ site.baseurl }}/public/images/madrid_2015_5.png" alt="...">
+                      <img src="{{ site.baseurl }}/public/images/madrid_2015_5.jpg" alt="...">
                       <div class="carousel-caption">
                         Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
                         Photo by Marie-Elise Lecoq, GBIF France
