--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -27,7 +27,7 @@
                     <a href="https://www.education.gov.au/national-collaborative-research-infrastructure-strategy-ncris" target="_blank"><img id="logo-ncris" class="img-responsive" src="{{ site.baseurl }}public/images/NCRIS_logo.jpg" alt="NCRIS" /></a>
                 </div>
                 <div class="col-md-3">
-                    <a href="https://www.csiro.au/" target="_blank"><img id="logo-csiro" class="img-responsive" src="{{ site.baseurl }}public/images/CSIRO.jpg" alt="CSIRO" /></a>
+                    <a href="https://www.csiro.au/" target="_blank"><img id="logo-csiro" class="img-responsive" src="{{ site.baseurl }}public/images/csiro.jpg" alt="CSIRO" /></a>
                 </div>
                 <div class="col-md-3">
                     <a href="https://www.csiro.au/" target="_blank"><img id="logo-gbif" class="img-responsive" src="{{ site.baseurl }}public/images/GBIF-2015.png" alt="GBIF" /></a>   
