--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
                         <i class="fa fa-info"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Registry componant</h3>
+                        <h3 class="sub-title">Registry component</h3>
                         <p>Metadata</p>
                     </div><!--//content-->
                 </div><!--//item-->
