--- a/_includes/features.html
+++ b/_includes/features.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">ALA Mailing List</h3>
-                        <p>Suscribe to the <a href="https://lists.gbif.org/mailman/listinfo/ala-portal" traget="_blank">ALA-Portal mailing list</a> where you will be able to ask any technical or non technical question.</p>
+                        <p>Suscribe to the <a href="https://lists.gbif.org/mailman/listinfo/ala-portal" traget="_blank">ALA-Portal mailing list</a> where you will be able to ask any technical or non technical questions.</p>
                     </div><!--//content-->
                 </div><!--//item-->        
             </div>
