--- a/_includes/promo.html
+++ b/_includes/promo.html
@@ -2,20 +2,22 @@
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
             <h2 class="title">Living <span class="highlight">Atlases</span></h2>
-            <p class="intro">A open community created around Atlas of Living Australia platform. </p>
+            <p class="intro">An open community created around Atlas of Living Australia platform. </p>
             <div class="btns">
-                <a class="btn btn-cta-secondary" href="http://ala-demo.gbif.fr/" target="_blank">Demo</a>
+                <a class="btn btn-cta-secondary" href="http://ala-demo.gbif.org/" target="_blank">Demo</a>
                 <a class="btn btn-cta-primary" href="https://www.gbif.org/programme/82953/living-atlases" target="_blank">GBIF Programme</a>
             </div>
             <ul class="meta list-inline">
-                <li><a href="https://github.com/AtlasOfLivingAustralia" target="_blank">View on GitHub</a></li>
-                <li><a href="https://github.com/AtlasOfLivingAustralia/documentation" target="_blank">Full Documentation</a></li>
-                <li>Created by: <a href="http://www.ala.org.au/" target="_blank">Atlas of Living Australia</li>
+                <li class="back-li"><a href="https://github.com/AtlasOfLivingAustralia" target="_blank">View on GitHub</a></li>
+                <li class="back-li"><a href="https://github.com/AtlasOfLivingAustralia/documentation" target="_blank">Full Documentation</a></li>
+                <li class="back-li">Created by: <a href="http://www.ala.org.au/" target="_blank">Atlas of Living Australia</li>
             </ul><!--//meta-->
-            <div class="caption">
-                <p> <a href="https://www.inaturalist.org/photos/2664553" target="_blank">Red Kangaroo</a>, <i class="fa fa-copyright"></i> John Sullivan, some rights reserved (<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC</a>)</p>
-            </div>
         </div><!--//container-->
+        <div class="caption">
+                <p>
+                    <a class="back-caption" href="https://www.inaturalist.org/photos/2664553" target="_blank">Red Kangaroo</a><span class="back-caption">, <i class="fa fa-copyright"></i> John Sullivan, some rights reserved (</span><a class="back-caption" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC</a><span class="back-caption">) via </span><a class="back-caption" href="https://www.inaturalist.org/" target="_blank">iNaturalist.org</a>
+                </p>
+            </div>
         <div class="social-media">
             <div class="social-media-inner container text-center">
                 <ul class="list-inline">
