--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -70,10 +70,10 @@
                                     <td>In production</td>
                                 <tr> 
                                 <tr>
-                                    <td>GBIF Sweden</td>
+                                    <td><a href="https://bioatlas.se" target="_blank">GBIF Sweden</a></td>
                                     <td class="text-center"></td>
                                     <td>Sweden</td>
-                                    <td>Swidish</td>
+                                    <td>Swedish - English</td>
                                     <td>In production</td>
                                 <tr>   
                                 <tr>
